syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.srp.beneficiaryrpc";
option java_outer_classname = "BeneficiaryProto";
import "google/protobuf/timestamp.proto";

// The greeting service definition.
service BeneficiaryGrpcService {
  // Sends a greeting
  rpc getBeneficiaryRpc (BeneficiaryInfoReq) returns (BeneficiaryInfoRes) {}
  rpc getBeneficiariesRpc (BeneficiariesInfoReq) returns (BeneficiariesInfoRes) {}
}

// The request message containing the user's name.
message BeneficiaryInfoReq {
  int64 id = 1;
}

// The response message containing the greetings
message BeneficiaryInfoRes{
  string name = 1;
  string disease = 2;
  string photo = 3;
  string status = 4;
  google.protobuf.Timestamp birthday = 5;
  string hospital = 6;
  int64 hospitalId = 7;
}

message BeneficiariesInfoReq {
  repeated int64 id = 1;
}

message BeneficiariesInfoRes {
  map<int64, BeneficiaryInfoRes> beneficiaries = 1;
}